[package]
name = "t-oc"
version = "6.0.0"
authors= [ "software9119.technology" ]
edition = "2021"
description = "Trie Occurrence Counter is frequency dictionary for any type implementing Iterator<Item = char>."
readme = "./README.md"
repository = "https://github.com/deep-outcome/t-oc"
license = "MIT"
keywords = ["frequency-dict","repetition-dict","retrieval-tree","trie"]
categories = ["algorithms", "data-structures"]
documentation = "https://docs.rs/t-oc/latest/t_oc/"
exclude = ["/rustfmt.toml"]

[features]
test-ext = []
